# csen-346

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  RTX3070_SETUP.md  RTX5090_SETUP.md  WAVE_SETUP.md  hugging_face.md  potential_topics.md  project_idea_presentation.md  pyproject.toml
.github/workflows/: ci.yml
KELE_original/: ATTRIBUTION.md  README.md
configs/: 3090ti.env  R9700_Mac-M4.env  baseline.env  common.env  dual-local.env  gemma4.env  l40s.env  local-mac-m4.env  local-teacher.env  wave.env
configs/consultants/: gpt4o.env  local-vllm-2b.env  local-vllm-9b.env  m4-llamacpp.env
configs/teachers/: gemma4-vllm.env  socrat-r9700.env  socrat-vllm.env
deliverables/: EXPERIMENT_LOG.md  IMPROVEMENT_PLAN.md  README.md  VISUALIZATION_PLAN.md
deliverables/overleaf/latex/: acl_latex.tex  acl_lualatex.tex  custom.bib
docs/: DATASET_EXPANSION_PLAN.md  EXPERIMENT_LOG.md  GPU_SUPPORT.md  IMPROVEMENT_PLAN.md  QWEN_EVAL_FIX_PLAN.md  TEST_PLAN.md  TRANSLATION_PLAN.md  VISUALIZATION_PLAN.md  potential_datasets.md  potential_topics.md  preliminary_report_l40s.md  preliminary_report_wave.md  preliminary_report_wave_hpc.md  project_idea_presentation.md  report_R9700_Mac-M4.md  report_all_results.md
hooks/: pre-commit
overleaf/latex/: acl_latex.tex  custom.bib
references/: README.md
references/KELE/: consultant_teacher_socratic_teaching_system.py
references/KELE/original_CN/: consultant_teacher_socratic_teaching_system_CN.py
references/requirements/: project_guidelines.md
resources/KELE/: consultant_teacher_socratic_teaching_system.py
resources/KELE/original_CN/: consultant_teacher_socratic_teaching_system_CN.py
resources/requirements/: project_guidelines.docx
results/R9700_Mac-M4/: metrics_summary.json  run_config.json
results/baseline/: metrics_summary.json  run_config.json
results/baseline/dialogues/: 0004.json  0005.json  0014.json  0018.json  0027.json  0030.json  0046.json  0054.json  0059.json  0065.json  0077.json  0080.json  0095.json  0121.json  0160.json  0173.json  0194.json  0201.json  0204.json  0205.json  0218.json  0227.json  0245.json
results/baseline_smoke/: metrics_summary.json  run_config.json
results/wave-2026-04-21T08-59-20-892964/: job.submitted  metrics_summary.json  run_config.json
scripts/: MAC_MINI_SETUP.md  MLX_SETUP.md  ONLINE_SETUP.md  POST_REBOOT.md  README.md  RTX3070_SETUP.md  RTX5090_SETUP.md  SETUP_COMMANDS.md  WAVE_SETUP.md  eval_amd_2mac.sh  eval_amd_mac.sh  l40s_setup.sh  mac_mini_setup.sh  post_eval_shutdown.sh  repo_sync.sh  run_eval.sh  serve_both.sh  serve_consultant.sh  serve_consultant_llamacpp.sh  serve_consultant_ollama.sh  serve_dual_gpu.sh  serve_gemma4.sh  serve_socratteachllm.sh  serve_teacher_local.sh  serve_teacher_online.sh  start_tl_server.sh  test_lan.sh  wave_setup.sh
scripts/slurm/: submit_wave.sh  wave_eval.slurm
src/: __init__.py
src/project/: config.py  evaluate.py  kele.py  metrics.py  scripts.py  serve_teacher.py  socratic_teaching_system.py  translate_dataset.py
tests/: test_config.py  test_consultant.py  test_evaluate.py  test_kele.py  test_kele_batch_eval.py  test_metrics.py  test_serve_teacher.py
