[project]
name = "csen-346"
version = "0.1.0"
description = "Natural Language Processing - CSEN 346 SCU. Hugging Face and other resources"
authors = [{ name = "Ulises Chavarria", email = "ulises.engineer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.31.0,<3.0.0)",
    "transformers>=4.47.0",
    "accelerate>=1.2.0",
    "bitsandbytes>=0.45.0",
    "huggingface-hub>=0.27.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.0",
    "tqdm>=4.67.0",
    "rich>=13.9.0",
    "datasets>=3.2.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "google-genai>=1.0.0",
]

[project.scripts]
kele = "src.project.kele:main"
kele-eval = "src.project.evaluate:main"
serve-teacher = "src.project.serve_teacher:main"
test = "src.project.scripts:test"
lint = "src.project.scripts:lint"

[tool.poetry]
packages = [{ include = "src", from = "." }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.9.0"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# NOTE: torch is intentionally NOT declared here.
# Poetry cannot resolve the +cu126 local-version CUDA wheel alongside
# PyPI's CPU wheel (transitive dep from transformers) for Python 3.14.
# Install torch after `poetry install` with:
#   poetry run pip install --index-url https://download.pytorch.org/whl/cu126 \
#     "torch>=2.10.0"
# See RTX3070_SETUP.md for the full install sequence.
# ---------------------------------------------------------------------------
