[project]
name = "csen-346"
version = "0.1.0"
description = "Natural Language Processing - CSEN 346 SCU. Hugging Face and other resources"
authors = [{ name = "Ulises Chavarria", email = "ulises.engineer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=2.31.0,<3.0.0)",
    "transformers>=4.47.0",
    "accelerate>=1.2.0",
    "bitsandbytes>=0.45.0",
    "huggingface-hub>=0.27.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.4.0",
    "tqdm>=4.67.0",
    "rich>=13.9.0",
    "datasets>=3.2.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.15.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "google-genai>=1.0.0",
    "tiktoken>=0.7.0",
]

[project.scripts]
kele = "src.project.kele:main"
kele-eval = "src.project.evaluate:main"
serve-teacher = "src.project.serve_teacher:main"
test = "src.project.scripts:test"
lint = "src.project.scripts:lint"

[tool.poetry]
packages = [{ include = "src", from = "." }]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -ra"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
ruff = ">=0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["references/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports)
    "I",   # isort (import ordering)
    "UP",  # pyupgrade (modern Python syntax)
]
ignore = [
    "E501", # line too long — ruff format handles this
]

[tool.ruff.lint.per-file-ignores]
# Test files stub out optional deps with sys.modules patches before importing, so
# E402 (import not at top) and F401 (unused imports) are intentional.
"tests/*" = ["F401", "E402"]
# Trailing spaces in the CN file are intentional markdown line-break syntax (  \n)
# inside the system-prompt string.
"references/KELE/original_CN/*" = ["W291"]

# ---------------------------------------------------------------------------
# NOTE: torch is intentionally NOT declared here.
# Poetry cannot resolve +rocm6.3 / +cu126 local-version identifiers alongside
# PyPI's CPU wheel (transitive dep from transformers).
# Use the Makefile to install — it auto-detects your GPU vendor:
#
#   make install          # auto-detect AMD/NVIDIA and install matching torch
#   make install-rocm     # explicit AMD ROCm (torch==2.9.1+rocm6.3)
#   make install-cuda     # explicit NVIDIA CUDA (torch+cu126)
# ---------------------------------------------------------------------------
